fix: renamed enteId and tipoDovutoId into organizationId and debtPositionTypeOrgId
